--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -17,25 +17,25 @@
 .aplayer.aplayer-arrow .aplayer-icon-loop,
 .aplayer.aplayer-arrow .aplayer-icon-order,
 .aplayer.aplayer-mobile .aplayer-icon-volume-down {
-  @apply text-blue-800 hover:text-orange-500
+  @apply  hover:text-orange-500
 }
 
 .aplayer .aplayer-info .aplayer-music .aplayer-title {
-  @apply text-sm text-blue-800 hover:text-orange-500
+  @apply text-sm  hover:text-orange-500
 }
 
 .aplayer .aplayer-info .aplayer-music .aplayer-author {
-  @apply text-xs text-blue-800 hover:text-orange-500
+  @apply text-xs  hover:text-orange-500
 }
 
 .aplayer .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-loaded {
-  @apply text-blue-800 hover:text-orange-500
+  @apply  hover:text-orange-500
 }
 
 .aplayer .aplayer-info .aplayer-controller .aplayer-time {
-  @apply text-blue-800 hover:text-orange-500
+  @apply  hover:text-orange-500
 }
 
 .aplayer .aplayer-info .aplayer-controller .aplayer-time .aplayer-icon path {
-  @apply fill-blue-800
+  @apply fill-black
 }
