--- a/src/assets/css/github.css
+++ b/src/assets/css/github.css
@@ -237,3 +237,20 @@ td.hljs-ln-numbers {
 .code-block-fullscreen-html-scroll {
     overflow: hidden
 }
+
+b,strong,dt,.is-active-link,.hljs-strong {
+    font-weight: 700;
+}
+.toc-link:before {
+    background-color: #9e0101;
+    content: ' ';
+    display: inline-block;
+    height: inherit;
+    left: 0;
+    margin-top: -1px;
+    position: absolute;
+    width: 2px
+}
+.is-active-link:before {
+    background-color: var(--theme-skin,#505050);
+}
