--- a/src/assets/css/github.css
+++ b/src/assets/css/github.css
@@ -243,6 +243,7 @@ b,strong,dt,.is-active-link,.hljs-strong {
 }
 .toc-container {
     z-index: 98;
+    max-width: 12rem;
     background-color: rgba(255, 255, 255, 0);
     right: calc((100% - 1250px)/ 2);
     position: absolute;
